Re-implement Themes, Fixes Dark and Light, Breaks index.html

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,7 +10,6 @@ body {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 
-  background-color: $bg;
   color: $fg;
 }
 
